<resources>
    <string name="app_name">Jumia Buy and Sell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name_short">Jumia Buy \&amp; Sell</string>

    <string name="menu_home">Home</string>
    <string name="menu_flash">Flash Sales</string>
    <string name="menu_friday">Black Friday</string>
    <string name="menu_voucher">Voucher Codes</string>
    <string name="menu_delivery">Free Delivery</string>
    <string name="menu_support">Customer Support</string>
    <string name="menu_order">How to place an Order</string>
    <string name="menu_share">Share this App</string>
    <string name="menu_more">More Apps</string>
    <string name="menu_version">Version 1.5.0 (Rate Us)</string>

    <string name="okay">Okay</string>
    <string name="share">Share</string>
    <string name="privacy">Privacy Policy</string>
    <string name="type_url">Paste product link here</string>
    <string name="homepage">Homepage</string>
    <string name="official">Premium Brands</string>
    <string name="black_friday">Black Friday</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="share_using">Share using…</string>
    <string name="quick_navigate">Quick Navigation</string>
    <string name="check_message">Check out this product I found:</string>
    <string name="download_our_app">Download Jumia Shopping App and enjoy amazing savings:</string>
    <string name="no_connect">No Connection</string>
    <string name="no_connect_message">It seems you don\'t have good internet connection</string>
    <string name="download_success_msg">You have successfully downloaded the latest update</string>
    <string name="install">Install Now</string>
    <string name="retry">RETRY</string>
    <string name="choose_location">Choose your location</string>

    <id name="viewBinding"/>
</resources>