<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_store_mall_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_friday"
        android:icon="@drawable/ic_baseline_whatshot_24"
        android:title="@string/menu_friday" />
    <item
        android:id="@+id/nav_voucher"
        android:icon="@drawable/ic_baseline_label_important_24"
        android:title="@string/menu_voucher" />

    <group android:id="@+id/nav_bottom" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_more" />
        <item
            android:id="@+id/nav_version"
            android:icon="@drawable/ic_baseline_navigate_next_24"
            android:title="@string/menu_version" />
    </group>
</menu>