<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.JumiaOfficialStores.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/Theme.JumiaOfficialStores.PopupOverlay">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/url_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/all_round_corner"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="@dimen/corner_radius"
                android:layout_marginRight="@dimen/corner_radius"
                android:layout_marginEnd="@dimen/corner_radius"
                android:paddingLeft="12dp"
                android:paddingRight="5dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:hint="@string/type_url"
                android:textColor="@color/accent_dark"
                android:textColorHint="@color/accent_dark"
                android:inputType="textUri"
                android:maxLines="1"
                android:imeOptions="actionGo"
                android:paddingEnd="5dp"
                android:paddingStart="12dp"
                android:layout_marginStart="@dimen/corner_radius" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <kef.technology.jumianet.NestedWebView
                android:id="@+id/home_webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <LinearLayout
            android:id="@+id/error_page_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_connect"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="@dimen/standard_155"
                android:layout_height="@dimen/standard_155"
                android:scaleType="fitCenter"
                android:alpha="0.5"
                android:src="@drawable/ic_baseline_wifi_off_24"/>
            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/no_connect_message"/>
            <Button
                android:id="@+id/retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:text="@string/retry"/>
        </LinearLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/accent_dark"
            app:trackColor="@color/white_500"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <View
        android:id="@+id/fab_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        style="@style/fab"
        app:maxImageSize="@dimen/standard_40"
        android:src="@drawable/ic_baseline_navigate_before_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_forward"
        style="@style/fab"
        app:maxImageSize="@dimen/standard_40"
        android:src="@drawable/ic_baseline_navigate_next_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        style="@style/fab"
        app:maxImageSize="30dp"
        android:src="@drawable/ic_baseline_refresh_24"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action"
        style="@style/fab"
        app:maxImageSize="35dp"
        app:fabSize="normal"
        android:src="@drawable/ic_baseline_control_action_24"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>